--- a/base_continent/i18n/base_continent.po
+++ b/base_continent/i18n/base_continent.po
@@ -1,56 +1,55 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* base_continent
+# 	* base_continent
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
+"Project-Id-Version: ODOO 8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-14 15:19+0000\n"
-"PO-Revision-Date: 2014-01-14 15:19+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2015-08-27 16:07+0200\n"
+"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
+"Language-Team: rs@techno-flex.de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: de\n"
+"X-Generator: Poedit 1.8.4\n"
 
 #. module: base_continent
 #: model:ir.actions.act_window,help:base_continent.action_continent
 msgid "Display and manage the list of all continents that can be assigned to your partner records."
-msgstr ""
+msgstr "Anzeigen und Verwalten der Liste der Kontinente, welche den Partner-Datensätzen zugewiesen werden können."
 
 #. module: base_continent
 #: model:ir.actions.act_window,name:base_continent.action_continent
 #: model:ir.ui.menu,name:base_continent.menu_continent_partner
 msgid "Continents"
-msgstr ""
+msgstr "Kontinente"
 
 #. module: base_continent
 #: model:ir.model,name:base_continent.model_res_country
 msgid "Country"
-msgstr ""
+msgstr "Land"
 
 #. module: base_continent
 #: help:res.continent,name:0
 msgid "The full name of the continent."
-msgstr ""
+msgstr "Der ausführliche Name des Kontinents."
 
 #. module: base_continent
 #: field:res.continent,name:0
 msgid "Continent Name"
-msgstr ""
+msgstr "Kontinentbezeichnung"
 
 #. module: base_continent
 #: model:ir.model,name:base_continent.model_res_partner
 msgid "Partner"
-msgstr ""
+msgstr "Partner"
 
 #. module: base_continent
-#: model:ir.model,name:base_continent.model_res_continent
-#: view:res.continent:0
-#: field:res.country,continent_id:0
-#: field:res.partner,continent_id:0
+#: model:ir.model,name:base_continent.model_res_continent view:res.continent:0
+#: field:res.country,continent_id:0 field:res.partner,continent_id:0
 msgid "Continent"
-msgstr ""
-
+msgstr "Kontinent"
