--- a/partner_firstname/i18n/de.po
+++ b/partner_firstname/i18n/de.po
@@ -1,19 +1,20 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* partner_firstname
+# 	* partner_firstname
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
+"Project-Id-Version: ODOO 8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-04 10:36+0000\n"
-"PO-Revision-Date: 2013-02-04 10:36+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2015-08-27 16:19+0200\n"
+"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"X-Generator: Poedit 1.8.4\n"
 
 #. module: partner_firstname
 #: code:addons/partner_firstname/partner.py:81
@@ -24,7 +25,7 @@ msgstr ""
 #: code:addons/partner_firstname/tests/test_partner_firstname.py:72
 #, python-format
 msgid "%s (copy)"
-msgstr "%s (kopie)"
+msgstr "%s (Kopie)"
 
 #. module: partner_firstname
 #: model:ir.model,name:partner_firstname.model_res_users
@@ -39,7 +40,7 @@ msgstr "Vorname"
 #. module: partner_firstname
 #: field:res.partner,lastname:0
 msgid "Lastname"
-msgstr "Name"
+msgstr "Nachname"
 
 #. module: partner_firstname
 #: view:res.partner:0
