--- a/res_partner_affiliate/i18n/de.po
+++ b/res_partner_affiliate/i18n/de.po
@@ -1,19 +1,20 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* res_partner_affiliate
+# 	* res_partner_affiliate
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
+"Project-Id-Version: ODOO 8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 12:14+0000\n"
-"PO-Revision-Date: 2013-02-01 12:14+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2015-08-27 16:25+0200\n"
+"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"X-Generator: Poedit 1.8.4\n"
 
 #. module: res_partner_affiliate
 #: view:res.partner:0
@@ -21,8 +22,7 @@ msgid "Phone:"
 msgstr "Tel.:"
 
 #. module: res_partner_affiliate
-#: view:res.partner:0
-#: field:res.partner,affiliate_ids:0
+#: view:res.partner:0 field:res.partner,affiliate_ids:0
 msgid "Affiliates"
 msgstr "Tochtergesellschaften"
 
@@ -34,10 +34,9 @@ msgstr "Mobil:"
 #. module: res_partner_affiliate
 #: model:ir.model,name:res_partner_affiliate.model_res_partner
 msgid "Partner"
-msgstr ""
+msgstr "Partner"
 
 #. module: res_partner_affiliate
 #: view:res.partner:0
 msgid "Fax:"
-msgstr ""
-
+msgstr "Fax.:"
