--- a/base_location/i18n/de.po
+++ b/base_location/i18n/de.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
+"Project-Id-Version: ODOO Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-27 16:08+0200\n"
-"PO-Revision-Date: 2015-08-27 16:11+0200\n"
+"PO-Revision-Date: 2015-09-02 13:32+0200\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
